--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.8.4 (March 24, 2010)
+------------------------------
+- 'Import' install option, to create a VM around an existing OS image
+- Support multiple boot devices and boot order
+- Watchdog device support
+- Enable setting a human readable VM description.
+- Option to manually specifying a bridge name, if bridge isn't detected
+
 Release 0.8.3 (February 8th, 2010)
 ----------------------------------
 
