Properly case VMware

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ The front end of the application uses the PyGTK / Glade libraries for
 all user interaction components. The back end uses libvirt for managing
 Xen, QEMU & KVM virtual machines. The UI is primarily tested with Xen
 and QEMU, but is intended to be portable to any virtualization backend
-libvirt supports. So when libvirt is ported to UML / VmWare / etc the
+libvirt supports. So when libvirt is ported to UML / VMware / etc the
 UI should not require any significant changes to deal with these drivers.
 
 Terminology
