et-mgmt-tools -> virt-tools-list

--- a/README
+++ b/README
@@ -79,8 +79,8 @@ the main source repository:
    ... make some changes & commit them locally...
    hg export -r my_feature_revision > my_feature.patch
 
-Then mail the 'myfeature.patch' file to et-mgmt-tools list, with [PATCH]
-and a brief description in the subject.
+Then mail the 'myfeature.patch' file to the virt-tools-list@redhat.com list,
+with [PATCH] and a brief description in the subject.
 
 Related software
 ----------------
