--- a/po/ja.po
+++ b/po/ja.po
@@ -7,13 +7,14 @@
 # kiyoto james hashida <khashida@brisbane.redhat.com>, 2007.
 # Hyu_gabaru Ryu_ichi <hyu_gabaru@yahoo.co.jp>, 2007.
 # Kiyoto Hashida <khashida@redhat.com>, 2008, 2009.
+# Hajime Taira <htaira@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: ja\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-24 11:50-0400\n"
+"POT-Creation-Date: 2010-04-27 11:50-0400\n"
 "PO-Revision-Date: 2009-12-11 18:06+0900\n"
-"Last-Translator: Kiyoto Hashida <khashida@redhat.com>\n"
+"Last-Translator: Hajime Taira <htaira@redhat.com>\n"
 "Language-Team: Japanese <jp@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2198,18 +2199,18 @@ msgid ""
 "\n"
 "Are you sure?"
 msgstr ""
-"これは接続を解除します:\n"
+"次のホストとの接続を解除します。\n"
 "\n"
 "%s\n"
 "\n"
-"よろしいですか?"
+"よろしいですか？"
 
 #: ../src/virtManager/manager.py:753
 msgid ""
 "Unable to open a connection to the Xen hypervisor/daemon.\n"
 "\n"
 msgstr ""
-"Xen ハイパーバイザー / デーモンへの接続を開けません。\n"
+"Xen ハイパーバイザー / デーモンへ接続できません。\n"
 "\n"
 
 #: ../src/virtManager/manager.py:758 ../src/virtManager/manager.py:766
@@ -2221,7 +2222,7 @@ msgid ""
 "Unable to open a connection to the libvirt management daemon.\n"
 "\n"
 msgstr ""
-"libvirt 管理デーモンに対する接続を開けません。\n"
+"libvirt 管理デーモンへ接続できません。\n"
 "\n"
 
 #: ../src/virtManager/manager.py:815
